docs: add triggo banner in main page

--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -3,29 +3,81 @@ title: Welcome
 ---
 
 import Link from "@docusaurus/Link";
+import logo from '../../static/img/logo.svg';
 
-# ![rtype.png](/img/rtype.png)
+<div
+  style={{
+    width: '100%',
+    backgroundColor: '#913AEE',
+    borderRadius: '20px',
+    boxSizing: 'border-box',
+    marginBottom: '15px',
+  }}
+>
+  <div
+    style={{
+      width: '100%',
+      display: 'flex',
+      alignItems: 'center',
+      padding: '10px 20px',
+      paddingTop: '40px',
+      boxSizing: 'border-box',
+    }}
+  >
+    <p
+      style={{
+        color: 'white',
+        fontSize: '32px',
+        fontFamily: 'Mada, sans-serif',
+        fontWeight: '700',
+        letterSpacing: '-0.1px',
+        marginRight: '10px',
+        marginBottom: '0',
+      }}
+    >Triggo</p>
+    <svg width="51" height="52" viewBox="0 0 51 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <ellipse cx="18.0508" cy="42.5714" rx="9.45506" ry="9.42857" fill="#FFFFFF"/>
+      <ellipse cx="39.2531" cy="27.7143" rx="11.7472" ry="11.7143" fill="#FFFFFF"/>
+      <ellipse cx="13.7528" cy="13.7143" rx="13.7528" ry="13.7143" fill="#FFFFFF"/>
+    </svg>
+  </div>
+</div>
 
-R-Type is a reimagined version of the iconic side-scrolling shooter. This project is developed by a
-team of enthusiasts aiming to recreate the core gameplay experience with modern technologies.
+Triggo est une plateforme d'automatisation innovante conçue pour simplifier et optimiser votre vie numérique. Inspirée par des services populaires comme IFTTT et Zapier, Triggo permet aux utilisateurs de créer des automatisations puissantes en interconnectant divers services et applications. Que vous souhaitiez sauvegarder automatiquement vos pièces jointes d'emails dans un dossier OneDrive ou envoyer un message sur Teams lorsqu'un problème est créé sur GitHub, Triggo rend tout cela possible avec une interface intuitive et des fonctionnalités robustes.
 
-## Play now
-1. Download the latest version of the game for your platform.
-    R-Type is available for:
-     - Windows (x64)
-     - Debian - Ubuntu (x64)
-     - Other Linux distributions (x64) (manual installation required)
-     - MacOS (x64 and ARM64) (manual compilation required)
+### Commencez à Automatiser
+1. #### Inscrivez-vous et Connectez-vous :
+   Créez un compte sur Triggo et connectez-vous pour accéder à toutes les fonctionnalités de la plateforme.
+
+2. #### Sélectionnez vos Services :
+   Choisissez parmi une variété de services populaires tels que Google, Facebook, Outlook 365, OneDrive, et bien d'autres. Connectez vos comptes pour commencer à créer des automatisations.
+
+3. #### Créez vos Automatisations :
+   Utilisez notre interface intuitive pour définir des actions et des réactions. Par exemple, vous pouvez configurer Triggo pour sauvegarder automatiquement les pièces jointes de vos emails dans un dossier OneDrive ou envoyer un message sur Teams lorsqu'un problème est créé sur GitHub.
+
+4. #### Laissez Triggo Faire le Travail :
+   Une fois vos automatisations configurées, Triggo s'occupe du reste. Les triggers surveillent les conditions spécifiées et déclenchent les réactions appropriées, vous permettant de vous concentrer sur ce qui compte vraiment.
+
+### Utilisez Triggo
+1. Triggo est disponible pour plusieurs plateformes :
+    - Windows (x64)
+    - Android
+    - iOS
+    - Web (accessible via n'importe quel navigateur)
     <div style={{marginTop: '10px', marginBottom: '10px'}}>
         <Link to={"/docs/project/download/client"}>
-            <button className={"button button--md button--primary"}>Download client</button>
+            <button className={"button button--md button--primary"}>Utiliser Triggo</button>
         </Link>
     </div>
-2. Play the game and enjoy the experience. Find out more about the game [here](/).
+
+### Découvrez Plus
+Pour en savoir plus sur Triggo et ses fonctionnalités, visitez notre documentation complète.
+
+Rejoignez la révolution de l'automatisation avec Triggo et transformez la manière dont vous gérez votre vie numérique !
 
 ## License
 
-This project is licensed under the MIT License - see the [LICENSE](https://github.com/G-Epitech/DFMY-RType/blob/main/LICENSE) file for details.
+This project is licensed under the MIT License - see the [LICENSE](https://github.com/G-Epitech/DFMTY-AREA/blob/main/LICENSE) file for details.
 
 ## Authors
 
