docs: translate french to english

--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -43,37 +43,37 @@ import logo from '../../static/img/logo.svg';
   </div>
 </div>
 
-Triggo est une plateforme d'automatisation innovante conçue pour simplifier et optimiser votre vie numérique. Inspirée par des services populaires comme IFTTT et Zapier, Triggo permet aux utilisateurs de créer des automatisations puissantes en interconnectant divers services et applications. Que vous souhaitiez sauvegarder automatiquement vos pièces jointes d'emails dans un dossier OneDrive ou envoyer un message sur Teams lorsqu'un problème est créé sur GitHub, Triggo rend tout cela possible avec une interface intuitive et des fonctionnalités robustes.
+Triggo is an innovative automation platform designed to simplify and optimize your digital life. Inspired by popular services like IFTTT and Zapier, Triggo allows users to create powerful automations by interconnecting various services and applications. Whether you want to automatically save email attachments to a OneDrive folder or send a message on Teams when an issue is created on GitHub, Triggo makes it all possible with an intuitive interface and robust features.
 
-### Commencez à Automatiser
-1. #### Inscrivez-vous et Connectez-vous :
-   Créez un compte sur Triggo et connectez-vous pour accéder à toutes les fonctionnalités de la plateforme.
+### Start Automating
+1. #### Sign Up and Log In:
+   Create an account on Triggo and log in to access all the platform's features.
 
-2. #### Sélectionnez vos Services :
-   Choisissez parmi une variété de services populaires tels que Google, Facebook, Outlook 365, OneDrive, et bien d'autres. Connectez vos comptes pour commencer à créer des automatisations.
+2. #### Select Your Services:
+   Choose from a variety of popular services such as Google, Facebook, Outlook 365, OneDrive, and many more. Connect your accounts to start building automations.
 
-3. #### Créez vos Automatisations :
-   Utilisez notre interface intuitive pour définir des actions et des réactions. Par exemple, vous pouvez configurer Triggo pour sauvegarder automatiquement les pièces jointes de vos emails dans un dossier OneDrive ou envoyer un message sur Teams lorsqu'un problème est créé sur GitHub.
+3. #### Create Your Automations:
+   Use our intuitive interface to define actions and reactions. For example, you can set up Triggo to automatically save email attachments to a OneDrive folder or send a message on Teams when an issue is created on GitHub.
 
-4. #### Laissez Triggo Faire le Travail :
-   Une fois vos automatisations configurées, Triggo s'occupe du reste. Les triggers surveillent les conditions spécifiées et déclenchent les réactions appropriées, vous permettant de vous concentrer sur ce qui compte vraiment.
+4. #### Let Triggo Do the Work:
+   Once your automations are configured, Triggo takes care of the rest. Triggers monitor specified conditions and trigger the appropriate reactions, allowing you to focus on what truly matters.
 
-### Utilisez Triggo
-1. Triggo est disponible pour plusieurs plateformes :
-    - Windows (x64)
-    - Android
-    - iOS
-    - Web (accessible via n'importe quel navigateur)
-    <div style={{marginTop: '10px', marginBottom: '10px'}}>
-        <Link to={"/docs/project/download/client"}>
-            <button className={"button button--md button--primary"}>Utiliser Triggo</button>
-        </Link>
-    </div>
+### Use Triggo Anywhere
+Triggo is available on multiple platforms:
+  - Windows (x64)
+  - Android
+  - iOS
+  - Web (accessible via any browser)
+  <div style={{marginTop: '10px', marginBottom: '10px'}}>
+    <Link to={"/docs/project/download/client"}>
+      <button className={"button button--md button--primary"}>Get Started</button>
+    </Link>
+  </div>
 
-### Découvrez Plus
-Pour en savoir plus sur Triggo et ses fonctionnalités, visitez notre documentation complète.
+### Discover More
+To learn more about Triggo and its features, visit our comprehensive documentation.
 
-Rejoignez la révolution de l'automatisation avec Triggo et transformez la manière dont vous gérez votre vie numérique !
+Join the automation revolution with Triggo and transform how you manage your digital life!
 
 ## License
 
@@ -81,7 +81,8 @@ This project is licensed under the MIT License - see the [LICENSE](https://githu
 
 ## Authors
 
+- [Dragos Suceveanu](https://github.com/sdragos1)
 - [Flavien Chenu](https://github.com/flavien-chenu)
-- [Math](https://github.com/TekMath)
-- [Suceveanu Dragos](https://github.com/sdragos1)
+- [Mathéo Coquet](https://github.com/TekMath)
+- [Thomas Boué](https://github.com/Thomaltarix)
 - [Yann Masson](https://github.com/Yann-Masson)
