--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -45,44 +45,7 @@ import logo from '../../static/img/logo.svg';
 
 Triggo is an innovative automation platform designed to simplify and optimize your digital life. Inspired by popular services like IFTTT and Zapier, Triggo allows users to create powerful automations by interconnecting various services and applications. Whether you want to automatically save email attachments to a OneDrive folder or send a message on Teams when an issue is created on GitHub, Triggo makes it all possible with an intuitive interface and robust features.
 
-### Start Automating
-1. #### Sign Up and Log In:
-   Create an account on Triggo and log in to access all the platform's features.
-
-2. #### Select Your Services:
-   Choose from a variety of popular services such as Google, Facebook, Outlook 365, OneDrive, and many more. Connect your accounts to start building automations.
-
-3. #### Create Your Automations:
-   Use our intuitive interface to define actions and reactions. For example, you can set up Triggo to automatically save email attachments to a OneDrive folder or send a message on Teams when an issue is created on GitHub.
-
-4. #### Let Triggo Do the Work:
-   Once your automations are configured, Triggo takes care of the rest. Triggers monitor specified conditions and trigger the appropriate reactions, allowing you to focus on what truly matters.
-
-### Use Triggo Anywhere
-Triggo is available on multiple platforms:
-  - Windows (x64)
-  - Android
-  - iOS
-  - Web (accessible via any browser)
-  <div style={{marginTop: '10px', marginBottom: '10px'}}>
-    <Link to={"/docs/project/download/client"}>
-      <button className={"button button--md button--primary"}>Get Started</button>
-    </Link>
-  </div>
-
 ### Discover More
-To learn more about Triggo and its features, visit our comprehensive documentation.
+To learn more about Triggo and its features, discover our comprehensive documentation.
 
 Join the automation revolution with Triggo and transform how you manage your digital life!
-
-## License
-
-This project is licensed under the MIT License - see the [LICENSE](https://github.com/G-Epitech/DFMTY-AREA/blob/main/LICENSE) file for details.
-
-## Authors
-
-- [Dragos Suceveanu](https://github.com/sdragos1)
-- [Flavien Chenu](https://github.com/flavien-chenu)
-- [Mathéo Coquet](https://github.com/TekMath)
-- [Thomas Boué](https://github.com/Thomaltarix)
-- [Yann Masson](https://github.com/Yann-Masson)
